2007-04-16  9:25 Mike Park  <mike.park@nasa.gov>

	* src/Makefile.am (faux_input) added faux_input to EXTRA_DIST.

2007-04-13 14:55 Mike Park  <mike.park@nasa.gov>

	* src/gridfortran.c (gridedge_) fixed transposition of arguments
	to gridNodeT so that the t values are correct. (They where set to
	DBL_MAX because requested edgeId was not found at node.) 

2007-04-11 15:23 Mike Park  <mike.park@nasa.gov>

	* Made 1.3.1 Release. GTech release. Includes quick bug fix for the
	intersection of projection, gridmove and frozen boundary layer.

2007-04-11 14:45 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridNodeProjectionDisplacement) skip node projection
	displacement calculation if node is frozen. (reported by Karen Bibb)
	* src/gridmove.c (gridmoveProjectionDisplacements) set frozen
	node displacements to zero and skip gridNodeProjectionDisplacement
	call. (reported by Karen Bibb)

2007-04-06  8:40 Mike Park  <mike.park@nasa.gov>

	* Made 1.3.0 Release. GTech release. Account for fun3d-23948 c2n
	index flip. Incudes FAUXGeom.  Fixes edge parameter parallel
	consistency.

2007-03-30 10:00 Mike Park  <mike.park@nasa.gov>

	* src/gridmpi.c (gridsetlocalnodedata_) repaired a bug that
	prevented ghost node edge t values from being updated.

2007-03-30  8:40 Mike Park  <mike.park@nasa.gov>

	* src/gridmpi.c (gridApplyQueue) set node xyz, map, and aux even
	for node that already exist to be compatable with existing node
	movement in future.

2007-03-29 14:17 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridCollapseEdge) to correctly evaluate nodes
	collapsed to lower dimensional gemoetry entities.

2007-03-29 11:52 Mike Park  <mike.park@nasa.gov>

	* src/gridmpi.c (gridApplyQueue) set face uv and edge t
	consistently with neighboring elements after a parallel operation.

2007-03-29 11:52 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridSplitEdgeRatio,gridCollapseEdge) to
	consistantly evaluate uv and xyz for both faces.
